[package]
name = "nhentai-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.11"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["native-tls-alpn"] }
scraper = "0.22.0"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"

[profile.release]
strip = true
opt-level = 3
lto = "thin"