[package]
name = "ndl"
authors = ["Maestix"]
description = "A minimalist Nhentai downloader with zero configuration"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Maestix/ndl"

[dependencies]
indicatif = "0.17.11"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["native-tls-alpn"] }
scraper = "0.23.1"
tokio = { version = "1.44.2", features = ["full"] }
url = "2.5.4"

[profile.release]
strip = true
opt-level = 3
lto = "fat"